--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header{
     background-color: rgb(1, 20, 4);
     color: white;
     text-align: center;
+    height: 220px;
 }
 h1{
     padding-top: 20px;
